# backend-ai-engineering-flyrank

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
assignments/: README.md
assignments/01-ai-core/: .env.example  README.md  package.json
assignments/01-ai-core/src/: index.ts  server.ts
assignments/assignment-01/: .env.example  README.md  package.json
assignments/week-04/assignment-04/: .env.example  .gitignore  EXPLANATION.md  README.md  package.json  pyproject.toml  requirements.txt
assignments/week-04/assignment-04/scraper/: __init__.py  clean.py  config.py  fetch.py  main.py  models.py  parse.py
assignments/week-04/assignment-04/tests/: test_clean.py  test_parse.py
assignments/week-04/assignment-04/tests/fixtures/: book_detail.html  book_detail_readmore.html  listing.html
docs/: README.md  adding-an-assignment.md  architecture.md  conventions.md  getting-started.md
extras/01-ai-core/: .env.example  README.md
scripts/: README.md  new-assignment.mjs
shared/: README.md  package.json
shared-py/: README.md  package.json  pyproject.toml
shared-py/src/flyrank_shared/: __init__.py  env.py  errors.py  logger.py  rate_limit.py  retry.py
shared-py/tests/: test_shared.py
shared/src/: env.ts  errors.ts  index.ts  logger.ts  result.ts
shared/tests/: shared.test.ts
templates/: README.md  assignment-README.md  env.example  folder-structure.md  project-README.md
templates/assignment/: .env.example  EXPLANATION.md  README.md  package.json
(+50 files in other folders)
